syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchandiseService.Grpc";
package MerchandiseService;

import "google/protobuf/timestamp.proto";

service MerchandiseServiceGrpc {
  rpc GetHistoryForEmployee(EmployeeMerchHistoryRequest) returns (GetHistoryForEmployeeResponse);
  rpc RequestMerchForEmployee(EmployeeMerchRequest) returns (RequestMerchForEmployeeResponse);
}

message EmployeeMerchHistoryRequest {
  int64 employee_id = 1;
}

message EmployeeMerchRequest {
  int64 employee_id = 1;
  int32 merch_type = 2;
}

message GetHistoryForEmployeeResponse {
  repeated EmployeeMerchGetResponseItem items = 1;
}

message EmployeeMerchGetResponseItem {
  EmployeeMerchItem item = 1;
  google.protobuf.Timestamp date = 2;
}

message EmployeeMerchItem {
  string name = 1;
  int64 sku_id = 2;
}

message RequestMerchForEmployeeResponse {
  bool is_success = 1;
  int64 request_id = 2;
  string message = 3;
}
